<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ai.wanaku</groupId>
    <artifactId>camel-integration-capability</artifactId>
    <version>0.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <inceptionYear>2025</inceptionYear>
    <url>https://github.com/wanaku-ai/camel-integration-capability</url>

    <name>Camel Integration Capability :: Parent</name>
    <description>Camel Integration Capability</description>

    <modules>
        <module>camel-integration-capability-common</module>
        <module>camel-integration-capability-runtimes</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <camel.version>4.20.0</camel.version>
        <slf4j.version>2.0.18</slf4j.version>
        <log4j.version>2.26.1</log4j.version>
        <picocli.version>4.7.7</picocli.version>
        <wanaku-capabilities-sdk.version>0.3.0-SNAPSHOT</wanaku-capabilities-sdk.version>
        <maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
        <jackson-databind.version>2.22.1</jackson-databind.version>
        <junit-jupiter.version>6.1.2</junit-jupiter.version>
        <jgit.version>7.7.0.202606012155-r</jgit.version>
        <spotless-maven-plugin.version>3.8.0</spotless-maven-plugin.version>
        <maven-failsafe-plugin.version>3.5.6</maven-failsafe-plugin.version>
        <palantir-format-version.version>2.71.0</palantir-format-version.version>
    </properties>

    <developers>
        <developer>
            <name>The Wanaku Development Team</name>
            <email>contact@wanaku.ai</email>
            <url>https://wanaku.ai</url>
            <organization>Wanaku</organization>
            <organizationUrl>http://wanaku.ai</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/wanaku-ai/camel-integration-capability.git</connection>
        <developerConnection>scm:git:https://github.com/wanaku-ai/camel-integration-capability.git</developerConnection>
        <url>https://github.com/wanaku-ai/camel-integration-capability</url>
        <tag>HEAD</tag>
    </scm>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <dependencyManagement>
        <dependencies>
            <!-- BOM imports -->
            <dependency>
                <groupId>org.apache.camel</groupId>
                <artifactId>camel-bom</artifactId>
                <version>${camel.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-bom</artifactId>
                <version>${slf4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>ai.wanaku.sdk</groupId>
                <artifactId>capabilities-bom</artifactId>
                <version>${wanaku-capabilities-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Internal modules -->
            <dependency>
                <groupId>ai.wanaku</groupId>
                <artifactId>camel-integration-capability-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Wanaku SDK -->
            <dependency>
                <groupId>ai.wanaku.sdk</groupId>
                <artifactId>capabilities-common</artifactId>
                <version>${wanaku-capabilities-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.wanaku.sdk</groupId>
                <artifactId>capabilities-discovery</artifactId>
                <version>${wanaku-capabilities-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.wanaku.sdk</groupId>
                <artifactId>capabilities-data-files</artifactId>
                <version>${wanaku-capabilities-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.wanaku.sdk</groupId>
                <artifactId>capabilities-exchange</artifactId>
                <version>${wanaku-capabilities-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.wanaku.sdk</groupId>
                <artifactId>capabilities-runtime</artifactId>
                <version>${wanaku-capabilities-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>ai.wanaku.sdk</groupId>
                <artifactId>capabilities-services-client</artifactId>
                <version>${wanaku-capabilities-sdk.version}</version>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j2-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <!-- CLI -->
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <!-- Jackson -->
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>

            <!-- Git -->
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>${jgit.version}</version>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.camel</groupId>
                    <artifactId>camel-maven-plugin</artifactId>
                    <version>${camel.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-fatjar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                        <archive>
                            <manifest>
                                <mainClass>${project.main.class}</mainClass>
                            </manifest>
                        </archive>
                        <finalName>${project.artifactId}-${project.version}</finalName>
                    </configuration>
                    <executions>
                        <execution>
                            <id>make-assembly</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless-maven-plugin.version}</version>
                    <configuration>
                        <java>
                            <palantirJavaFormat>
                                <version>${palantir-format-version.version}</version>
                            </palantirJavaFormat>
                            <removeUnusedImports />
                            <formatAnnotations />
                            <forbidWildcardImports />

                            <excludes>
                                <exclude>**/*.properties</exclude>
                                <exclude>**/*.proto</exclude>
                            </excludes>

                            <importOrder>
                                <wildcardsLast>true</wildcardsLast>
                                <order>jakarta|javax,org.w3c|org.xml,java|org|io|,,\#,org.junit|org.mockito|\#org.assertj|\#org.junit|\#org.mockito</order>
                            </importOrder>
                        </java>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>apply</goal>
                            </goals>
                            <phase>compile</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
